--- a/Tamrin/Final-Project.ipynb
+++ b/Tamrin/Final-Project.ipynb
@@ -59,7 +59,7 @@
     "print(\"\")\n",
     "\n",
     "if a == 0 :\n",
-    "    a = int(input(\"X ra Dobare Vared Konid( !0 ) : \"))\n",
+    "    a = int(input(\"A ra Dobare Vared Konid( !0 ) : \"))\n",
     "else:\n",
     "    roots = moadele(a, b, c)\n",
     "\n",
